--- a/practice/psd/practice-psd/practice-6/style.css
+++ b/practice/psd/practice-psd/practice-6/style.css
@@ -62,6 +62,48 @@
 }
 .section-2{
     background-color: bisque;
+    position: relative;
+}
+#img-1{
+    position: absolute;
+    top: 10px;
+    right: 100px;
+    width: 150px;
+    height: 150px;
+}
+#img-2{
+    position: absolute;
+    top: 400px;
+    right: 20px;
+    width: 80px;
+    height: 80px;
+}
+#img-3{
+    position: absolute;
+    top: 460px;
+    right: 400px;
+    width: 80px;
+    height: 80px;
+}
+#img-4{
+    position: absolute;
+    top: 200px;
+    width: 100px;
+    height: 100px;
+}
+#img-5{
+    position: absolute;
+    top: 50px;
+    left: 150px;
+    width: 70px;
+    height: 60px;
+}
+#img-6{
+    position: absolute;
+    top: 450px;
+    left: 390px;
+    width: 90px;
+    height: 90px;
 }
 #section-2-1 h1{
     padding-top: 60px;
