--- a/practice/psd/practice-psd/practice-6/style.css
+++ b/practice/psd/practice-psd/practice-6/style.css
@@ -197,10 +197,193 @@
     font-family: "Nunito";
 }
 #btn-2{
+    margin: 20px 0px 20px 0px;
+    padding: 10px 20px 10px 10px;
+    border-radius: 50px;
+    border: none;
     font-size: 25px;
     text-transform: uppercase;
     color: #f64b3c;
     font-weight: 700;
     font-family: "Montserrat";
     text-align: center;
+}
+.section-4{
+    display: flex;
+    justify-content: space-around;
+    background-color: bisque;
+    position: relative;
+}
+#img-7{
+    position: absolute;
+    top: 10px;
+    left: 500px;
+    width: 150px;
+    height: 150px;
+    rotate: 300deg;
+}
+#img-8{
+    position: absolute;
+    top: 60px;
+    left: 2px;
+    width: 80px;
+    height: 80px;
+    rotate: 60deg;
+}
+#img-9{
+    position: absolute;
+    top: 340px;
+    left: 500px;
+    width: 50px;
+    height: 50px;
+    rotate: 140deg;
+}
+#img-10{
+    position: absolute;
+    top: 340px;
+    right: 5px;
+    width: 100px;
+    height: 100px;
+}
+#img-11{
+    position: absolute;
+    top: 390px;
+    left: 100px;
+    width: 70px;
+    height: 70px;
+    rotate: 100deg;
+}
+#img-12{
+    position: absolute;
+    top: 30px;
+    right: 60px;
+    width: 80px;
+    height: 80px;
+}
+#section-4-1 h1{
+    padding-top: 100px;
+    font-size: 75px;
+    color: #f64b3c;
+    font-weight: 700;
+    font-family: "Archivo";
+}
+#section-4-1 p{
+    padding-top: 10px;
+    font-size: 30px;
+    color: #f64b3c;
+    font-weight: 400;
+    font-family: "Montserrat";
+}
+#btn-3{
+    margin: 20px 0px 20px 0px;
+    padding: 10px 20px 10px 10px;
+    border-radius: 50px;
+    border: none;
+    font-size: 25px;
+    text-transform: uppercase;
+    color: #ffff;
+    background-color: #f64b3c;
+    font-weight: 700;
+    font-family: "Montserrat";
+    text-align: center;
+}
+#section-4-2 img{
+    margin: 60px 40px 20px 20px;
+    width: 400px;
+    height: 400px;
+    border: none;
+    border-radius: 200px;
+}
+.section-5{
+    background-color: #f64b3c;
+}
+#section-5-1 h1{
+    padding-top: 100px;
+    font-size: 60px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Archivo";
+    text-align: center;
+}
+#section-5-1 p{
+    padding-top: 10px;
+    font-size: 25px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Archivo";
+    text-align: center;
+}
+#section-5-2{
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+}
+#section-5-2-1{
+    margin: 40px 0px 40px 0px;
+    width: 200px;
+    height: 200px;
+    border-radius: 160px;
+    background-color: transparent;
+    color: #ffffff;
+    border:5px solid white;
+}
+#section-5-2-1 h1{
+    position: absolute;
+    top: 80px;
+    left: 150px;
+    font-size: 70px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Archivo";
+    text-align: center;
+}
+#section-5-2-1 p{
+    position: absolute;
+    top: 160px;
+    left: 120px;
+    font-size: 30px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Montserrat";
+    text-align: center;
+}
+#section-5-2-2{
+    margin: 40px 0px 40px 0px;
+    width: 200px;
+    height: 200px;
+    border-radius: 160px;
+    background-color: transparent;
+    color: #ffffff;
+    border:5px solid white;
+}
+#section-5-2-2 h1{
+    position: absolute;
+    top: 80px;
+    left: 575px;
+    font-size: 70px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Archivo";
+    text-align: center;
+}
+#section-5-2-2 p{
+    position: absolute;
+    top: 160px;
+    left: 555px;
+    font-size: 33px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Montserrat";
+    text-align: center;
+}
+#section-5-2-3{
+    margin: 40px 0px 40px 0px;
+    width: 200px;
+    height: 200px;
+    border-radius: 160px;
+    background-color: transparent;
+    color: #ffffff;
+    border:5px solid white;
 }
