--- a/practice/psd/practice-psd/practice-6/style.css
+++ b/practice/psd/practice-psd/practice-6/style.css
@@ -387,3 +387,164 @@
     color: #ffffff;
     border:5px solid white;
 }
+#section-5-2-3 h1{
+    position: absolute;
+    top: 80px;
+    right:175px;
+    font-size: 70px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Archivo";
+    text-align: center;
+}
+#section-5-2-3 p{
+    position: absolute;
+    top: 160px;
+    right:130px;
+    font-size: 33px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Montserrat";
+    text-align: center;
+}
+.section-6{
+    background-color: bisque;
+    position: relative;
+}
+#section-6-1 {
+    display: flex;
+    justify-content: space-around;
+}
+#img-13{
+    position: absolute;
+    top: 10px;
+    right: 150px;
+    width: 150px;
+    height: 150px; 
+}
+#section-6-1 h1{
+    text-align: center;
+    font-size: 75px;
+    color: #f64b3c;
+    font-weight: 700;
+    font-family: "Archivo";
+}
+#section-6-2{
+    display: flex;
+    justify-content: space-around;
+}
+#card-1{
+    margin: 20px 0px 20px 0px;
+    width: 300px;
+    background-color: #ffffff;
+}
+#card-1 h1{
+    padding-top: 30px;
+    text-align: center;
+    font-size: 25px;
+    color: #f64b3c;
+    font-weight: 700;
+    font-family: "Archivo";
+}
+#card-1 img{
+    width: 70px;
+    height: 70px;
+    padding:20px 0px 0px 115px;
+}
+#card-1 h3{
+    padding-top: 10px;
+    text-align: center;
+    font-size: 25px;
+    color: #f64b3c;
+    font-weight: 700;
+    font-family: "Archivo";
+}
+#card-1 p{
+    padding-top: 10px;
+    text-align: center;
+    font-size: 20px;
+    color: #f64b3c;
+    font-weight: 700;
+    font-family: "Archivo";
+}
+#btn-4{
+    margin: 20px 50px;
+    font-size: 20px;
+    border-radius: 30px;
+    background-color: #ff3300;
+    border: none;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Montserrat";
+    text-align: center;   
+}
+#card-2{
+    margin: 20px 0px 20px 0px;
+    width: 300px;
+    background-color: #ffffff;
+}
+#card-2 h1{
+    padding-top: 30px;
+    text-align: center;
+    font-size: 25px;
+    color: #f64b3c;
+    font-weight: 700;
+    font-family: "Archivo";
+}
+#card-2 img{
+    width: 70px;
+    height: 70px;
+    padding:20px 0px 0px 115px;
+}
+#card-2 h3{
+    padding-top: 10px;
+    text-align: center;
+    font-size: 25px;
+    color: #f64b3c;
+    font-weight: 700;
+    font-family: "Archivo";
+}
+#card-2 p{
+    padding-top: 10px;
+    text-align: center;
+    font-size: 20px;
+    color: #f64b3c;
+    font-weight: 700;
+    font-family: "Archivo";
+}
+#card-3{
+    margin: 20px 0px 20px 0px;
+    width: 300px;
+    background-color: #ffffff;
+}
+#card-3 h1{
+    padding-top: 30px;
+    text-align: center;
+    font-size: 25px;
+    color: #f64b3c;
+    font-weight: 700;
+    font-family: "Archivo";
+}
+#card-3 img{
+    width: 70px;
+    height: 70px;
+    padding:20px 0px 0px 115px;
+}
+#card-3 h3{
+    padding-top: 10px;
+    text-align: center;
+    font-size: 25px;
+    color: #f64b3c;
+    font-weight: 700;
+    font-family: "Archivo";
+}
+#card-3 p{
+    padding-top: 10px;
+    text-align: center;
+    font-size: 20px;
+    color: #f64b3c;
+    font-weight: 700;
+    font-family: "Archivo";
+}
