--- a/practice/psd/practice-psd/practice-6/style.css
+++ b/practice/psd/practice-psd/practice-6/style.css
@@ -419,9 +419,49 @@
 #img-13{
     position: absolute;
     top: 10px;
-    right: 150px;
-    width: 150px;
-    height: 150px; 
+    right: 220px;
+    width: 100px;
+    height: 100px; 
+}
+#img-14{
+    position: absolute;
+    top: 75px;
+    left: 10px;
+    width: 60px;
+    height: 60px;
+    rotate: 60deg; 
+}
+#img-15{
+    position: absolute;
+    bottom: 40px;
+    left: 10px;
+    width: 60px;
+    height: 60px;
+    rotate: 150deg;
+}
+#img-16{
+    position: absolute;
+    top:337px;
+    right: 21px;
+    width: 100px;
+    height: 100px;
+    rotate: -40deg;
+}
+#img-17{
+    position: absolute;
+    top: 135px;
+    right:10px;
+    width: 50px;
+    height: 50px;
+    rotate: 30deg;
+}
+#img-18{
+    position: absolute;
+    top: 10px;
+    left: 150px;
+    width: 60px;
+    height: 60px;
+    rotate: -10deg;
 }
 #section-6-1 h1{
     text-align: center;
@@ -470,6 +510,7 @@
 }
 #btn-4{
     margin: 20px 50px;
+    padding: 10px;
     font-size: 20px;
     border-radius: 30px;
     background-color: #ff3300;
