--- a/practice/psd/practice-psd/mediaquery_psd/practice-3/style.css
+++ b/practice/psd/practice-psd/mediaquery_psd/practice-3/style.css
@@ -2233,4 +2233,427 @@ No media query for `xs` since this is the default in Bootstrap */
 }
 
 /* XX-Large devices (larger desktops, 1400px and up) */
-/* @media (min-width: 1400px) { ... } */
+@media (min-width: 1400px) {
+    .nav img{
+        width: 142px;
+        height: 100px;
+    }
+    .nav a{
+        font-size: 26px;
+    }
+    #input-text{
+        width: 130px;
+        height: 50px;
+    }
+    ::placeholder {
+        color: white;
+        opacity: 1;
+        font-size: 22px;
+    }
+    .box{
+        width: 50px;
+        height: 50px;
+    }
+    .box i{
+        padding: 20px 0px 20px 15px;
+    }
+    .section-1-1 h1{
+        margin: 200px 0px 0px 50px;
+        font-size: 55px;
+    }
+    .section-1-1 p{
+        margin: 26px 0px 0px 50px;
+        font-size: 40px;
+    }
+    .btn-1{
+        margin: 45px 0px 24px 50px;
+        width: 150px;
+        height: 50px;
+        font-size: 25px;
+    }
+    .btn-2{
+        margin: 45px 0px;
+        width: 150px;
+        height: 50px;
+        font-size: 25px;
+    }
+    .section-1-2 img{
+        margin: 60px 30px 20px 120px;
+        width: 310px;
+        height: 560px;
+    }
+    .section-2-1 h1{
+        margin: 100px 0px 0px 60px;
+        font-size: 55px;
+    }
+    .section-2-1 p{
+        margin: 34px 0px 0px 60px;
+        font-size: 35px;
+    }
+    .btn-3{
+        margin: 60px 0px 60px 60px;
+        width: 185px;
+        height: 75px;
+    }
+    .section-2-2{
+        margin: 100px 0px 0px 220px;
+        width: 500px;
+        height: 400px;
+    }
+    .section-2-2-1{
+        width: 500px;
+        height: 400px;
+    }
+    .section-2-2-2 i{
+        font-size: 65px;
+        position: absolute;
+        top: 140px;
+        left: 220px;
+        z-index: 1;
+    } 
+    .section-2-2-3 img{
+        position: absolute;
+        bottom: -30px;
+        left: -30px;
+    }
+    .section-3 h1{
+        padding-top: 55px;
+        font-size: 43px;
+    }
+    .section-3 p{
+        padding-top: 25px;
+        font-size: 40px;
+    }
+    .section-3-1{
+        display: flex;
+    }
+    .section-3-1-1 img{
+        margin:30px 50px 30px 50px;
+        width: 370px;
+        height: 360px;
+    }
+    .section-3-1-1 h4{
+        font-size: 40px;
+        text-align: center;
+    }
+    .section-3-1-1 p{
+        margin:0px 0px 60px 20px;
+        font-size: 30px;
+        text-align: center;
+    }
+    .section-3-1-2 img{
+        margin:30px 50px 30px 50px;
+        width: 370px;
+        height: 360px;
+    }
+    .section-3-1-2 h4{
+        font-size: 40px;
+        text-align: center;
+    }
+    .section-3-1-2 p{
+        margin:0px 0px 60px 20px;
+        font-size: 30px;
+        text-align: center;
+    }
+    .section-3-1-3 img{
+        margin:30px 50px 30px 50px;
+        width: 370px;
+        height: 360px;
+    }
+    .section-3-1-3 h4{
+        font-size: 40px;
+        text-align: center;
+    }
+    .section-3-1-3 p{
+        margin:0px 0px 60px 20px;
+        font-size: 30px;
+        text-align: center;
+    }
+    .section-4-1{
+        margin: 50px 0px 0px 60px;
+        width: 380px;
+        height: 380px;
+        position: relative;
+    }
+    .section-4-1-1{
+        background: #fcc302;
+        opacity: 0.6;
+        width: 380px;
+        height: 380px;
+    }
+    .section-4-1-2 i{
+        font-size: 60px;
+        position: absolute;
+        top: 160px;
+        left: 180px;
+        z-index: 1;
+    }
+    .section-4-1-3 img{
+        position: absolute;
+        bottom: -30px;
+        right: -30px;
+    }
+    .section-4-2 h1{
+        font-size: 50px;
+    }
+    .section-4-2 p{
+        margin-top: 35px;
+        font-size: 32px;
+    }
+    .btn-4{
+        margin: 30px 160px 10px 10px;
+        width: 182px;
+        height: 69px;
+    }
+    .section-5 h1{
+        margin-top: 70px;
+        font-size: 50px;
+    }
+    .section-5 p{
+        padding-top: 20px;
+        font-size: 40px;
+    }
+    .section-5-1{
+        display: flex;
+    }
+    .section-5-1 img{
+        margin:20px 0px 20px 90px;
+        width: 360px;
+        height: 355px;
+    }
+    .section-5-1-1 h4{
+        font-size: 46px;
+        text-align: center;
+    }
+    .section-5-1-2 h4{
+        font-size: 46px;
+        text-align: center;
+    }
+    .section-5-1-3 h4{
+        font-size: 46px;
+        text-align: center;
+    }
+    .btn-5{
+        margin: 20px 0px 20px 175px;
+        padding: 10px 20px 10px 10px;
+        font-size: 25px;
+    }
+    .section-6 h1{
+        margin-top: 80px;
+        font-size: 50px;
+    }
+    .section-6 p{
+        margin:30px 0px 50px 0px;
+        font-size: 45px;
+        text-align: center;
+    }
+    .section-6-1{
+        display: flex;
+    }
+    .section-6-1-1 img{
+        margin:20px 0px 20px 90px;
+        width: 360px;
+        height: 355px;
+    }
+    .section-6-1-1 h4{
+        font-size: 35px;
+        text-align: center;
+    }
+    .section-6-1-1 p{
+        margin: 10px 0px;
+        font-size: 30px;
+        text-align: center;
+    }
+    .section-6-1-2 img{
+        margin:20px 0px 20px 90px;
+        width: 360px;
+        height: 355px;
+    }
+    .section-6-1-2 h4{
+        font-size: 35px;
+        text-align: center;
+    }
+    .section-6-1-2 p{
+        margin: 10px 0px;
+        font-size: 30px;
+        text-align: center;
+    }
+    .section-6-1-3 img{
+        margin:20px 0px 20px 90px;
+        width: 360px;
+        height: 355px;
+    }
+    .section-6-1-3 h4{
+        font-size: 35px;
+        text-align: center;
+    }
+    .section-6-1-3 p{
+        margin: 10px 0px;
+        font-size: 30px;
+        text-align: center;
+    }
+    .icon{
+        margin: 20px 0px 20px 160px;
+    }
+    .section-7-1{
+        padding: 160px 0px;
+    }
+    .section-7-1-1 img{
+        margin: 10px 0px 0px 60px;
+        width: 80px;
+        height: 75px;
+    }
+    .section-7-1-1 h3{
+        margin: 10px 0px 0px 0px;
+        font-size: 45px;
+    }
+    .section-7-1-1 p{
+        font-size: 35px;
+        text-align: center;
+    }
+    .section-7-1-2 img{
+        margin: 10px 0px 0px 60px;
+        width: 80px;
+        height: 75px;
+    }
+    .section-7-1-2 h3{
+        margin: 10px 0px 0px 0px;
+        font-size: 45px;
+    }
+    .section-7-1-2 p{
+        font-size: 35px;
+        text-align: center;
+    }
+    .section-7-1-3 img{
+        margin: 10px 0px 0px 60px;
+        width: 80px;
+        height: 75px;
+     }
+    .section-7-1-3 h3{
+        margin: 10px 0px 0px 0px;
+        font-size: 45px;
+    }
+    .section-7-1-3 p{
+        font-size: 32px;
+        text-align: center;
+    }
+    .section-8 h1{
+        margin-top: 80px;
+        font-size: 50px;
+    }
+    .section-8 p{
+        margin-top: 20px;
+        font-size: 40px;
+    }
+    .section-8-1{
+        display: flex;
+    }
+    .section-8-1-1{
+        margin:30px 0px 20px 120px;
+        width: 350px;
+        height: 590px;
+    }
+    .section-8-1-1 img{
+        width: 350px;
+        height: 300px;
+    }
+    .section-8-1-1 h3{
+        margin: 20px 0px 0px 30px;
+        font-size: 30px;
+    }
+    .section-8-1-1 h6{
+        margin: 10px 0px 0px 30px;
+        font-size: 25px;
+    }
+    .section-8-1-1 p{
+        margin: 10px 0px;
+        font-size: 25px;
+    }
+    .btn-6{
+        margin: 8px 0px 0px 20px;
+        font-size: 20px;
+    }
+    .section-8-1-2{
+        margin:30px 0px 20px 120px;
+        width: 350px;
+        height: 590px;
+    }
+    .section-8-1-2 img{
+        width: 350px;
+        height: 300px;
+    }
+    .section-8-1-2 h3{
+        margin: 20px 0px 0px 30px;
+        font-size: 30px;
+    }
+    .section-8-1-2 h6{
+        margin: 10px 0px 0px 30px;
+        font-size: 25px;
+    }
+    .section-8-1-2 p{
+        margin: 10px 0px;
+        font-size: 25px;
+    }
+    .section-8-1-3{
+        margin:30px 0px 20px 90px;
+        width: 350px;
+        height: 590px;
+    }
+    .section-8-1-3 img{
+        width: 350px;
+        height: 300px;
+    }
+    .section-8-1-3 h3{
+        margin: 20px 0px 0px 30px;
+        font-size: 25px;
+    }
+    .section-8-1-3 h6{
+        margin: 10px 0px 0px 30px;
+        font-size: 25px;
+    }
+    .section-8-1-3 p{
+        margin: 10px 0px;
+        font-size: 25px;
+    }
+    .section-9{
+        padding: 120px 0px 60px 0px;
+        display: flex;
+    }
+    .section-9-1 h2{
+        font-size: 30px;
+    }
+    .section-9-1 p{
+        font-size: 28px;
+    }
+    .section-9-2 h2{
+        font-size: 30px;
+    }
+    .section-9-2 p{
+        font-size: 30px;
+    }
+    .section-9-3 h3{
+        font-size: 30px;
+    }
+    .section-9-3 p{
+        font-size: 30px;
+        text-align: right;
+    }
+    #input-text-1{
+        position: absolute;
+        top: 25px;
+        left: 74px;
+        width: 230px;
+        height: 30px;
+        text-align: center;
+    }
+    .box-1{
+        width: 35px;
+        height: 30px;
+        position: absolute;
+        top: 50px;
+        right: 113px;
+    }
+    .icon-1{
+        margin: 120px 0px 20px 130px;
+    }
+}
